# asset-allocation-rl

./: README.md  pyproject.toml
data/: README.md
data/processed/: README.md  monthly_dataset.parquet
docs/: ARCHITECTURE.md  DATA_DECISIONS.md  DEVELOPEMENT_GUIDELINES.md  PRODUCT_SPEC.md  ROADMAP.md
experiments/: README.md
experiments/hpo_001/: config.yaml
experiments/hpo_002/: metrics.json  notes.md
experiments/q_learning_001/: actions.csv  config.yaml  notes.md
experiments/q_learning_002/: metrics.json  portfolio_values.csv
scripts/: README.md  analyze_portfolio.py  build_dataset.py  compare_results.py  evaluate_results.py  optimize_hyperparameters.py  run_backtest.py  run_benchmarks.py  run_walk_forward.py  train_agent.py
src/agents/: README.md  __init__.py  q_learning.py  random_agent.py  training.py
src/analysis/: README.md  __init__.py  portfolio.py
src/backtesting/: README.md  __init__.py  agents.py  benchmarks.py  engine.py  splitter.py  strategies.py  walk_forward.py
src/config/: __init__.py  assets.yaml
src/data/: README.md  __init__.py  dataset.py  loaders.py  preprocessing.py  returns.py  yahoo.py
src/env/: README.md  __init__.py  action_space.py  portfolio_env.py  (+1 more)
tests/: test_action_space.py  test_agent_backtesting.py  test_benchmarks.py  test_data_pipeline.py  test_environment.py  test_experiment_tracking.py  test_features.py  test_metrics.py  test_model_comparison.py  test_optimizer.py  test_portfolio_analysis.py  test_q_learning.py  test_random_agent.py  test_reward.py  test_rule_based_strategies.py  test_walk_forward.py
(+32 files in other folders)
